--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html" class="nav-link px-2" id="nav-p">Inicío</a></li>
                     <li><a href="sevicos.html" class="nav-link px-2 " id="nav-p">Serviços</a></li>
                     <li><a href="planos.html" class="nav-link px-2 " id="nav-p">Planos</a></li>
-                    <li><a href="#" class="nav-link px-2 " id="nav-p">Sobre</a></li>
+                    <li><a href="sobre.html" class="nav-link px-2 " id="nav-p">Sobre</a></li>
                     <li><a href="#" class="nav-link px-2 " id="nav-p">Contato</a></li>
                 </ul>
 
@@ -36,9 +36,176 @@
         <img src="Img/img-inicio.gif" alt="Google-inicio" id="img-inicio">
 
 
-        <section>
+        <section id="index-inicio">
 
-            
+            <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-dark">
+                <div class="col-md-6 p-lg-5 mx-auto my-5">
+
+                    <h1 class="display-3 fw-bold" id="conteudo">O que é o Google?</h1>
+                    <h3 class="fw-normal" id="conteudo">O Google é uma das maiores empresas de tecnologia do mundo,
+                        conhecida principalmente pelo seu poderoso mecanismo de busca.
+                        <br>Fundado em 1998, o Google
+                        revolucionou o acesso à informação na internet e, desde então, expandiu seus serviços para
+                        incluir e-mail, mapas, armazenamento em nuvem, vídeos e muito mais.
+                        <br>Presente no dia a dia de
+                        bilhões de pessoas, o Google conecta o mundo de forma rápida, prática e inteligente.
+                    </h3>
+
+                </div>
+            </div>
+
+        </section>
+
+        <section id="index-meio">
+            <div class="container px-4 py-5">
+                <h2 class="pb-2 border-bottom">Ferramentas e Extensões do Google</h2>
+
+                <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+                    <div class="col d-flex flex-column align-items-start gap-2">
+                        <p class="text-body-secondary">O Google vai muito além do seu famoso buscador. A empresa oferece
+                            diversas ferramentas online que facilitam a organização, produtividade e colaboração no dia
+                            a dia. Entre as mais utilizadas estão o Google Sheets, Docs, Slides, Drive e Gmail —
+                            soluções integradas e acessíveis que funcionam diretamente do navegador, sem precisar
+                            instalar nada. Perfeitas para uso pessoal, acadêmico ou profissional.
+
+                        </p>
+                    </div>
+
+                    <div class="col">
+                        <div class="row row-cols-1 row-cols-sm-2 g-4">
+                            <div class="col d-flex flex-column gap-2">
+                                <div class="feature-icon-small d-inline-flex bg-gradient fs-4 rounded-3">
+                                    <img src="Img/sheets.png" alt="Sheets">
+                                </div>
+                                <h4 class="fw-semibold mb-0 text-body-emphasis">Google Sheets</h4>
+                                <p class="text-body-secondary">Planilhas online para criação, edição e compartilhamento
+                                    em tempo real.
+                                    <br>Ideal para análises, relatórios e colaboração em equipe.
+                                </p>
+                            </div>
+
+                            <div class="col d-flex flex-column gap-2">
+                                <div class="feature-icon-small d-inline-flex bg-gradient fs-4 rounded-3">
+
+                                    <img src="Img/docs.png" alt="Docs">
+                                </div>
+                                <h4 class="fw-semibold mb-0 text-body-emphasis">Google Docs</h4>
+                                <p class="text-body-secondary">Editor de texto colaborativo, perfeito para criar
+                                    documentos, trabalhos e propostas de forma prática.</p>
+                            </div>
+
+                            <div class="col d-flex flex-column gap-2">
+                                <div class="feature-icon-small d-inline-flex bg-gradient fs-4 rounded-3">
+                                    <img src="Img/slides.png" alt="Slides">
+                                </div>
+                                <h4 class="fw-semibold mb-0 text-body-emphasis">Google Slides</h4>
+                                <p class="text-body-secondary">Criação de apresentações online, com templates modernos e
+                                    recursos interativos.</p>
+                            </div>
+
+                            <div class="col d-flex flex-column gap-2">
+                                <div class="feature-icon-small d-inline-flex  bg-gradient fs-4 rounded-3">
+                                    <img src="Img/drive.png" alt="Drive">
+                                </div>
+                                <h4 class="fw-semibold mb-0 text-body-emphasis">Google Drive</h4>
+                                <p class="text-body-secondary">Armazenamento em nuvem para guardar e acessar arquivos de
+                                    qualquer lugar, com segurança.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="index-fim">
+
+
+
+
+            <div class="container px-4 py-5" id="custom-cards">
+                <h2 class="pb-2 border-bottom">Ferramentas mais usadas</h2>
+
+
+
+                <div class="col">
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front" style="background-image: url('unsplash-photo-1.jpg');">
+                                <h3 class="card-title">Google Drive</h3>
+                            </div>
+                            <div class="flip-card-back">
+                                <p>Armazene, compartilhe e acesse seus arquivos em qualquer lugar com segurança.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+
+                    <div class="col">
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                                <div class="flip-card-front" id="img-card-1">
+                                    <h3 class="card-title">Google Drive</h3>
+                                </div>
+
+                                <div class="flip-card-back" id="card-back-1">
+                                    <p>O Google Drive é uma ferramenta de armazenamento em nuvem que permite guardar,
+                                        organizar e compartilhar arquivos de forma segura e acessível de qualquer
+                                        dispositivo com internet. Ele suporta documentos, fotos, vídeos, planilhas e
+                                        muito mais, com 15 GB gratuitos para todos os usuários. É amplamente usado tanto
+                                        por pessoas quanto por empresas para manter arquivos sempre disponíveis e
+                                        sincronizados.</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col">
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                                <div class="flip-card-front" id="img-card-2">
+                                    <h3 class="card-title">Google Docs</h3>
+                                </div>
+
+                                <div class="flip-card-back" id="card-back-2">
+                                    <p>O Google Docs é um editor de textos online que permite criar, editar e colaborar
+                                        em documentos em tempo real. Com salvamento automático e histórico de versões,
+                                        ele facilita o trabalho em equipe, seja para criar relatórios, redigir textos
+                                        acadêmicos ou montar propostas profissionais. Tudo pode ser compartilhado com um
+                                        link, com diferentes níveis de permissão (visualização, comentário ou edição).
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                                <div class="flip-card-front" id="img-card-3">
+                                    <h3 class="card-title">Google Docs</h3>
+                                </div>
+
+                                <div class="flip-card-back" id="card-back-3">
+                                    <p>O Google Docs é um editor de textos online que permite criar, editar e colaborar
+                                        em documentos em tempo real. Com salvamento automático e histórico de versões,
+                                        ele facilita o trabalho em equipe, seja para criar relatórios, redigir textos
+                                        acadêmicos ou montar propostas profissionais. Tudo pode ser compartilhado com um
+                                        link, com diferentes níveis de permissão (visualização, comentário ou edição).
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
         </section>
 
 
