--- a/sevicos.html
+++ b/sevicos.html
@@ -21,9 +21,9 @@
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="index.html" class="nav-link px-2" id="nav-p">Inicío</a></li>
-                    <li><a href="#" class="nav-link px-2 " id="nav-p">Serviços</a></li>
+                    <li><a href="sevicos.html" class="nav-link px-2 " id="nav-p">Serviços</a></li>
                     <li><a href="planos.html" class="nav-link px-2 " id="nav-p">Planos</a></li>
-                    <li><a href="#" class="nav-link px-2 " id="nav-p">Sobre</a></li>
+                    <li><a href="sobre.html" class="nav-link px-2 " id="nav-p">Sobre</a></li>
                     <li><a href="#" class="nav-link px-2 " id="nav-p">Contato</a></li>
                 </ul>
 
